--- a/norway/scss/_styles.scss
+++ b/norway/scss/_styles.scss
@@ -1,63 +1,3 @@
-// .header {
-//     height: 55px;
-//     background-color: #141517;
-//     @include vp-display(flex);
-//     @include vp-justify-content(space-between);
-
-//     .info {
-//         @include vp-display(flex);
-        
-//         .logo {
-//             padding-left: 0;
-//             width: 136px;
-//             height: 50px;
-//             img {
-//                 height: 55px;
-//             }
-//         }
-//         .menu {
-//             @include vp-display(flex);
-//             color: #fff;
-//             margin-top: 20px;
-//             &__item {
-//                 span {
-//                     margin-left: 8px;
-//                 }
-//                 + .menu__item {
-//                     margin-left: 30px;
-//                 }
-//                 a {
-//                     color: #b8b8b9;
-//                     &:hover {
-//                         text-decoration: none;
-//                     }
-//                 }
-//             }
-//         }
-//     }
-    
-//     .search {
-//         margin-top: 10px;
-//         margin-right: 10px;
-//         position: relative;
-//         input {
-//             height: 35px;
-//             padding: 6px;
-//             background-color: #3d3e40;
-//             border: 0;
-//             @include vp-box-sizing(border-box);
-//         }
-
-//         span {
-//             position: absolute;
-//             right: 10px;
-//             top: 10px;
-//             font-size: 16px;
-//             color: #fff;
-//         }
-//     }
-// }
-
 html {
     font-size: 14px;
 }
@@ -99,6 +39,8 @@ html {
     
     #navbar-main {
         background-color: #141517;
+        position: relative;
+        z-index: 2;
     }
     
     .nav {
