--- a/norway/scss/_styles.scss
+++ b/norway/scss/_styles.scss
@@ -59,10 +59,6 @@ html {
         
     }
     @media screen and (max-width: 768px) {
-        .navbar #navbar-main {
-            position: relative;
-            z-index: 2;
-        }
         .search {
             float: none !important;
             display: inline-block;
@@ -432,4 +428,9 @@ html {
     .copyright {
         font-size: 12px;
     }
+}
+
+.article__img {
+    position: relative;
+    z-index: -1;
 }
